# ai-project-template

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-extras.txt  requirements.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  getting-started.rst  index.rst  make.bat
scripts/: rename_project.sh
src/your_project_name/: __init__.py  cli.py  utils.py
tests/: test_cli.py  test_import.py  test_utils.py
