[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
[tool.coverage.run]
relative_files = true
branch = false

[tool.coverage.report]
show_missing = false
skip_covered = false
