[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "Python data science project template."
authors = [
  { name = "Hideto Oda" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

# Runtime dependencies (canonical source of truth; requirements*.txt are thin
# wrappers around these definitions for convenient installation).
dependencies = [
  "click",
  "python-dotenv>=0.5.1",
  "numpy",
  "pandas",
  "tqdm",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
# Core development tools (lint/test/format/type-check/pre-commit)
dev = [
  "pytest",
  "flake8",
  "coverage",
  "black",
  "isort",
  "mypy",
  "pre-commit",
]

# Jupyter / notebook tools
notebook = [
  "jupyterlab",
  "ipykernel",
]

# Visualization tools
viz = [
  "matplotlib",
  "seaborn",
]

# Documentation tools
docs = [
  "Sphinx",
]

# AWS / cloud-related tools
cloud = [
  "boto3",
  "s3fs",
  "awscli",
  "aioboto3",
]

# Dashboard / web UI and API tools
dashboard = [
  "streamlit",
  "fastapi",
  "uvicorn[standard]",
]

# Vision / CV related extras
vision = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
]

# BigQuery related extras
bigquery = [
  "google-cloud-bigquery",
  "google-cloud-bigquery-storage",
  "db-dtypes",
]

[project.scripts]
your_project_name = "your_project_name.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = ["E203", "W503"]

[tool.coverage.run]
relative_files = true
branch = false

[tool.coverage.report]
show_missing = false
skip_covered = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
